--- a/index.html
+++ b/index.html
@@ -25,15 +25,13 @@
   <body id="t" class="offline">
 
     <div id="page-0" class="welcom form-group row">
-      <div class="col-sm-3 col-form-label" style="display: block"></div>
-      <div class="col-sm-6">
+      <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10">
         <p>Welcom</p>
         <button onclick="onStartGame()">Start Game</button>
       </div>
     </div>
     <div id="page-1" class="username form-group row">
-      <div class="col-sm-3 col-form-label" style="display: block"></div>
-      <div class="col-sm-6">
+      <div class="col-xl-5 col-lg-6 col-md-8 col-sm-1">
         <input
           placeholder="Enter user name"
           type="text"
@@ -44,8 +42,7 @@
       <button onclick="onGoToRoom()">Go</button>
     </div>
     <div id="page-2" class="room form-group row">
-      <div class="col-sm-3 col-form-label" style="display: block"></div>
-      <div class="col-sm-6">
+      <div class="col-xl-5 col-lg-6 col-md-8 col-sm-1">
         <input
           placeholder="Enter room id"
           type="text"
@@ -60,8 +57,7 @@
     </div>
 
     <div id="page-3" class="invite form-group row">
-      <div class="col-sm-3 col-form-label" style="display: block"></div>
-      <div class="col-sm-3">
+      <div class="col-xl-5 col-lg-6 col-md-8 col-sm-1">
         <button style="margin-top: 4px" onclick="handleOnReady()">Ready</button>
       </div>
       <div class="col-sm-3">
@@ -71,8 +67,6 @@
     </div>
 
     <div id="page-4" class="runner form-group row">
-      <div class="col-sm-1"></div>
-      <div class="col-sm-10">
         <div id="messageBox" class="sendmessage">
           <h1 style="text-align: center; font-family: 'Open Sans', sans-serif">
             Press Space to start
@@ -108,7 +102,6 @@
             </template>
           </div>
         </div>
-      </div>
     </div>
 
     <div id="page-5" class="result form-group"></div>
