--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
     function onStartGame() {
       document.getElementById("page-0").style.display = "none";
       document.getElementById("page-1").style.display = "show";
+      document.getElementsByClassName("runner-canvas").style.display = "none";
     }
 
     function onGoToRoom() {
@@ -134,6 +135,7 @@
     function onReady() {
       document.getElementById("page-3").style.display = "none";
       document.getElementById("page-4").style.display = "show";
+      document.getElementsByClassName("runner-canvas").style.display = "show";
     }
   </script>
 </html>
