countdown start, quit, remove pause, etc

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div id="page-0" class="welcom form-group row">
       <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10">
-        <p>Welcom</p>
+        <p>Welcome</p>
         <button onclick="onStartGame()">Start Game</button>
       </div>
     </div>
@@ -68,10 +68,9 @@
 
     <div id="page-4" class="runner form-group row">
         <div id="messageBox" class="sendmessage">
-          <h1 style="text-align: center; font-family: 'Open Sans', sans-serif">
-            Press Space to start
+          <h1 id="middle-text" style="text-align: center; font-family: 'Open Sans', sans-serif">
           </h1>
-          <div class="niokbutton" onclick="okbuttonsend()"></div>
+          <button id="surrender" onclick="onSurrender()">X</button>
         </div>
         <div id="main-frame-error" class="interstitial-wrapper">
           <div id="main-content">
@@ -108,14 +107,11 @@
   </body>
 
   <script>
-    document.onkeydown = function (evt) {
-      evt = evt || window.event;
-      if (evt.keyCode == 32) {
-        var box = document.getElementById("messageBox");
-        box.style.visibility = "hidden";
-      }
-    };
-
+    document.getElementById("page-0").style.display = "none";
+    document.getElementById("page-1").style.display = "none";
+    document.getElementById("page-2").style.display = "none";
+    document.getElementById("page-3").style.display = "none";
+    document.getElementById("page-4").style.display = "show";
     function onStartGame() {
       document.getElementById("page-0").style.display = "none";
       document.getElementById("page-1").style.display = "show";
