--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
       document.getElementById("page-1").style.display = "show";
     }
 
-    const btnGo = document.getElementById('page-1');
-    btnGo.onclick = function() {
-      document.getElementById("page-1").style.display = "none";
-      document.getElementById("page-2").style.display = "show";
-    }
+    // const btnGo = document.getElementById('page-1');
+    // btnGo.onclick = function() {
+    //   document.getElementById("page-1").style.display = "none";
+    //   document.getElementById("page-2").style.display = "show";
+    // }
 
     // function onGoToRoom() {
     //   document.getElementById("page-1").style.display = "none";
