--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div id="page-3" class="invite form-group row">
       <div class="col-sm-3 col-form-label" style="display: block"></div>
       <div class="col-sm-3">
-        <span id="txtUserNameReady1" style="display: none;"></span>
+        <span id="txtUserNameReady1"></span>
         <span id="txtReady1" style="display: none;">Ready</span>
         <button id="btnReady1" style="margin-top: 4px;display: block;">Ready</button>
       </div>
