--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
   <script src="index.js"></script>
 
   <script>
-          document.getElementById("page-0").style.display = "none";
-          document.getElementById("page-1").style.display = "none";
-          document.getElementById("page-2").style.display = "none";
-          document.getElementById("page-3").style.display = "none";
-          document.getElementById("page-4").style.display = "show";
+          // document.getElementById("page-0").style.display = "none";
+          // document.getElementById("page-1").style.display = "none";
+          // document.getElementById("page-2").style.display = "none";
+          // document.getElementById("page-3").style.display = "none";
+          // document.getElementById("page-4").style.display = "show";
     // document.getElementById("page-0").style.display = "show";
     // document.getElementById("page-1").style.display = "none";
  
