remove evet clict

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
     //   document.getElementsByClassName("runner-canvas").style.display = "show";
     // }
 
-    window.addEventListener('return-to-window', () => {
-      onGoToRoom();
-    })
+    // window.addEventListener('return-to-window', () => {
+    //   onGoToRoom();
+    // })
   </script>
 </html>
